k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bilet-system
  labels:
    name: bilet-system
